[gd_scene load_steps=3 format=3 uid="uid://du3yx3v7snkkb"]

[ext_resource type="Script" path="res://scripts/windows/recursive_window.gd" id="1_s8ifr"]
[ext_resource type="Texture2D" uid="uid://sty1r4akbfmk" path="res://cross.png" id="2_ft144"]

[node name="RecursiveWindow" type="Node2D"]
script = ExtResource("1_s8ifr")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -86.5
offset_right = 149.0
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Pintows XP"

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
disabled = true
icon = ExtResource("2_ft144")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Description" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(258, 0)
layout_mode = 2
size_flags_vertical = 6
text = "Couldn't defragment the disk."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="AcceptButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Try Again"

[node name="RejectButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Cancel"

[connection signal="gui_input" from="PanelContainer/VBoxContainer/PanelContainer" to="." method="_on_panel_container_gui_input"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/RejectButton" to="." method="_on_reject_button_pressed"]
